AMA-025 : SaaS Elite Tier: Global Architectural. Alineacion correcta al 95% hacia una artitectura estable de Saas Elite