@@ -1,3 +1,4 @@
+package com.amachi.app.vitalia.medical.patient.entity;
 import com.amachi.app.core.common.entity.BaseTenantEntity;
 import com.amachi.app.core.common.entity.Model;
 import com.amachi.app.core.common.entity.SoftDeletable;
@@ -20,6 +21,10 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+
+import com.amachi.app.core.common.entity.DomainRole;
+import com.amachi.app.core.common.entity.Model;
+import com.amachi.app.core.common.entity.SoftDeletable;
 
 /**
  * Enterprise Patient Entity (SaaS Elite Tier).
@@ -44,7 +49,7 @@ import java.util.Set;
 @EqualsAndHashCode(callSuper = true, exclude = {"medicalHistories", "encounters", "hospitalizations", "allergies", "activeMedications"})
 @Audited
 @Schema(description = "Registro integral del paciente — SaaS Elite Tier")
-public class Patient extends BaseTenantEntity implements Model, SoftDeletable {
+public class Patient extends BaseTenantEntity implements Model, SoftDeletable, DomainRole {
 
     @ManyToOne(fetch = FetchType.LAZY, optional = false)
     @JoinColumn(name = "FK_ID_PERSON", nullable = false, foreignKey = @ForeignKey(name = "FK_MED_PAT_PERSON"))
@@ -116,16 +121,6 @@ public class Patient extends BaseTenantEntity implements Model, SoftDeletable {
     @Column(name = "ADDITIONAL_REMARKS", columnDefinition = "TEXT")
     private String additionalRemarks;
 
-    // --- Temporary Bridge Methods (Deprecated - Move to Mapper) ---
-    @Transient @Deprecated
-    public String getFirstName() { return person != null ? person.getFirstName() : null; }
-    @Transient @Deprecated
-    public String getLastName() { return person != null ? person.getLastName() : null; }
-    @Transient @Deprecated
-    public String getFullName() { return person != null ? person.getFullName() : null; }
-    @Transient @Deprecated
-    public String getNationalId() { return person != null ? person.getNationalId() : null; }
-
     @Override
     public void delete() {
         this.isDeleted = true;
@@ -143,6 +138,6 @@ public class Patient extends BaseTenantEntity implements Model, SoftDeletable {
         return this.medicalHistories.stream()
                 .filter(mh -> Boolean.TRUE.equals(mh.getIsCurrent()))
                 .findFirst()
-                .orElse(this.medicalHistories.get(0));
+                .orElse(this.medicalHistories.getFirst());
     }
 }
